fix attachment distortion

--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -39,7 +39,11 @@
 }
 
 .posts-show-attachment-container {
+  display: flex;
+  align-items: center;
+  min-height: 450px;
   margin-right: 335px;
+  background-color: #fafafa;
   &:hover .fa-play { visibility: visible; opacity: 1; }
 }
 
@@ -47,7 +51,6 @@
   min-height: 450px;
   display: block;
   width: auto;
-  height: 100%;
   max-width: 598px;
   max-height: 598px;
   background-color: #fafafa;
